<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeFragment.HomeMedicine.HomeMedicineAddActivity"
    android:clickable="true"
    android:focusableInTouchMode="true"
    android:focusable="true">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:fillViewport="true"
        android:clickable="true"
        android:focusable="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="191dp"
                android:layout_height="190dp"
                android:layout_marginTop="40dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_doctor"
        android:clickable="true"
        android:focusable="true"/>

            <TextView
                android:id="@+id/tvGreet"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="30dp"
                android:fontFamily="@font/playfair_display"
                android:text="@string/med_add_header"
                android:textSize="29sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView2"
        android:clickable="true"
        android:focusable="true" />

            <TextView
                android:id="@+id/tvContent"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="30dp"
                android:text="@string/med_add_content"
                android:textColor="@color/fg_secondary"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvGreet"
        android:clickable="true"
        android:focusable="true" />

            <TextView
                android:id="@+id/tvContent2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="25dp"
                android:layout_marginEnd="30dp"
                android:text="@string/med_add_content1"
                android:textColor="@color/fg_secondary"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvContent"
        android:clickable="true"
        android:focusable="true" />

            <EditText
                android:id="@+id/etName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="30dp"
                android:backgroundTint="@color/fg_main"
                android:ems="10"
                android:fontFamily="@font/playfair_display"
                android:hint="@string/med_add_hint1"
                android:inputType="textPersonName"
                android:textColor="#47445D"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvContent2"/>

            <TextView
                android:id="@+id/tvContent3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="25dp"
                android:layout_marginEnd="30dp"
                android:text="@string/med_add_content2"
                android:textColor="@color/fg_secondary"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/etName"
        android:clickable="true"
        android:focusable="true"/>

            <EditText
                android:id="@+id/etQuantity"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="10dp"
                android:ems="10"
                android:fontFamily="@font/playfair_display"
                android:hint="@string/med_add_hint2"
                android:inputType="numberDecimal"
                android:textColor="@color/fg_main"
                android:textSize="24sp"
                app:layout_constraintEnd_toStartOf="@+id/spMeasurement"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvContent3" />

            <Spinner
                android:id="@+id/spMeasurement"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="30dp"
                android:clickable="true"
                android:dropDownWidth="wrap_content"
                android:entries="@array/measurements"
                android:focusable="true"
                app:layout_constraintBottom_toBottomOf="@+id/etQuantity"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvContent3" />

            <TextView
                android:id="@+id/tvContent4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="35dp"
                android:layout_marginEnd="30dp"
                android:text="@string/med_add_content3"
                android:textColor="@color/fg_secondary"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/etQuantity"
        android:clickable="true"
        android:focusable="true"/>

            <Button
                android:id="@+id/btnGo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="30dp"
                android:backgroundTint="@color/btn_primary"
                android:text="@string/btn_go"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvContent4"
        android:clickable="true"
        android:focusable="true"/>

            <Button
                android:id="@+id/btnBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="10dp"
                android:backgroundTint="@color/btn_secondary"
                android:text="@string/btn_back"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvContent4"
        android:clickable="true"
        android:focusable="true"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>